--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_atleta.html.twig
@@ -39,7 +39,7 @@
                </td>
                <td class="hidden-xs">{% if atl.lfga is null or atl.lfga == "" %} <em class="text-muted">--</em> {% else %} {{ atl.lfga }} {% endif %} </td>
                <td class="hidden-xs">{% if atl.lxogade is null or atl.lxogade == "" %} <em class="text-muted">--</em> {% else %} {{ atl.lxogade }} {% endif %} </td>
-               <td{% if cat is defined %} class="hidden-xs"{% endif %}>{{ categorias[catIndex].nombre }}</td>
+               <td{% if cat is defined %} class="hidden-xs"{% endif %}>{% if categorias[catIndex] is not null %}{{ categorias[catIndex].nombre }}{% endif %}</td>
                <td>{{ atl.apellidos }}</td>
                <td>{{ atl.nombre }}</td>
                <td class="hidden-xs">{% if atl.sexo == false %}<abbr title="Hombre">H</abbr>{% elseif atl.sexo == true %}<abbr title="Mujer">M</abbr>{% endif %}</td>
@@ -48,7 +48,7 @@
                <td>
                   <button id="sel-atl-{{ atl.id }}" 
                      data-nombre="{{ atl.apellidos }}, {{ atl.nombre }}"
-                     data-catnombre="{{ categorias[catIndex].nombre }}"
+                     data-catnombre="{% if categorias[catIndex] is not null %}{{ categorias[catIndex].nombre }}{% endif %}"
                      data-toggle="button" class="btn btn-xs btn-block btn-default sel-btn" onClick="toggleCheckButton(this)"><span class="glyphicon glyphicon-unchecked"></span> NO
                   </button>
                </td>
