--- a/src/Easanles/AtletismoBundle/Resources/views/Default/pant_cuenta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/pant_cuenta.html.twig
@@ -88,7 +88,7 @@
                         <tr><td><strong>Apellidos:</strong></td><td colspan="3">{{ app.user.idAtl.apellidos }}</td></tr>
                         <tr><td><strong>Nombre:</strong></td><td colspan="3">{{ app.user.idAtl.nombre }}</td></tr>
                         <tr><td><strong>DNI:</strong></td><td>{{ app.user.idAtl.dni }}</td><td><strong>Nick:</strong></td><td>{{ app.user.idAtl.nick }}</td></tr>
-                        <tr><td><strong>Fecha de nacimiento:</strong></td><td>{{ app.user.idAtl.fnac|date('d/m/Y') }} <em>({{ edad }} años)</em></td><td><strong>Categoría:</strong></td><td>{{ categoria }}</td></tr>
+                        <tr><td><strong>Fecha de nacimiento:</strong></td><td>{{ app.user.idAtl.fnac|date('d/m/Y') }} <em>({{ edad }} años)</em></td><td><strong>Categoría:</strong></td><td>{% if categoria is not null %}{{ categoria }}{% endif %}</td></tr>
                         <tr><td><strong>Nacionalidad:</strong></td><td>{{ app.user.idAtl.nacion }}</td><td><strong>Sexo:</strong></td><td>{% if app.user.idAtl.sexo == false %}Hombre{% elseif app.user.idAtl.sexo == true %}Mujer{% endif %}</td></tr>
                         <tr><td><strong>Tipo:</strong></td><td>{{ app.user.idAtl.tipo }}</td><td><strong>Estado:</strong></td><td>{% if app.user.idAtl.esalta == false %}<strong class="text-danger">BAJA</strong>{% elseif app.user.idAtl.esalta == true %}ALTA{% endif %}</td></tr>
                         <tr><td><strong>Dirección:</strong></td><td colspan="3">{{ app.user.idAtl.direccion }}</td></tr>
