--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/list_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/list_atleta.html.twig
@@ -128,16 +128,16 @@
 <nav>
   <ul class="pager">
      {% if from == 0 %}
-     <li class="previous disabled"><a href="#">Inicio</a></li>
-     <li class="previous disabled"><a href="#"><span aria-hidden="true">&larr;</span> Anterior</a></li>
+     <li class="previous disabled"><span>Inicio</span></li>
+     <li class="previous disabled"><span><span aria-hidden="true">&larr;</span> Anterior</span></li>
      {% else %}
-     <li class="previous"><a href="#" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery(), 0))">Inicio</a></li>
-     <li class="previous"><a href="#" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery(), {{ from - numResultados }}))"><span aria-hidden="true">&larr;</span> Anterior</a></li>
+     <li class="previous"><span class="clickable text-info" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery(), 0))">Inicio</span></li>
+     <li class="previous"><span class="clickable text-info" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery(), {{ from - numResultados }}))"><span aria-hidden="true">&larr;</span> Anterior</span></li>
      {% endif %}
      {% if atletas|length < numResultados %}
-        <li class="next disabled"><a href="#">Siguiente <span aria-hidden="true">&rarr;</span></a></li>
+        <li class="next disabled"><span>Siguiente <span aria-hidden="true">&rarr;</span></a></li>
      {% else %}
-        <li class="next"><a href="#" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery(), {{ from + numResultados }}))">Siguiente <span aria-hidden="true">&rarr;</span></a></li>
+        <li class="next"><span class="clickable text-info" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery(), {{ from + numResultados }}))">Siguiente <span aria-hidden="true">&rarr;</span></span></li>
      {% endif %}
      {% if numResultados > 0 and from is divisible by (numResultados) %}
      <p class="text-center text-info">Página {{ (from / numResultados) + 1 }}</p>
