--- a/src/Easanles/AtletismoBundle/Resources/views/Default/pant_instalar.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/pant_instalar.html.twig
@@ -85,6 +85,16 @@
                </div>
             </div>
          {% endif %}
+         {% if crearCuotaTpr %}
+            <div class="panel panel-danger">
+               <div class="panel-heading">
+                  <h3 class="panel-title">No existe el tipo de prueba Cuota</h3>
+               </div>
+               <div class="panel-body">
+                  <p>Pulse "Reparar BD" para crear el tipo de prueba especial CUOTA</p>
+               </div>
+            </div>
+         {% endif %}
          <button id="install-btn" class="btn btn-lg btn-primary col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6" onClick="installBD()"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Reparar BD</button>
          <div class="clearfix"></div>
          <div id="loading-icon" class="col-xs-offset-5 col-xs-2" style="display: none">
