--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/form_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/form_inscripcion.html.twig
@@ -6,8 +6,9 @@
 {% endblock %}
 
 {% block navbar %}
-      <li class="active"><a href="{{ path('listado_atletas') }}">Atletas</a></li>
-      <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
+      {% if app.user.idAtl is not null %}<li><a href="{{ path('mis_competiciones') }}">Mis competiciones</a></li>{% endif %}
+      <li><a href="{{ path('listado_atletas') }}">Atletas</a></li>
+      <li{% if com.esCuota == false %} class="active"{% endif %}><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
       <li class="dropdown">
          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Records <span class="caret"></span></a>
          <ul class="dropdown-menu">
@@ -16,11 +17,12 @@
             <li><a href="{{ path('pantalla_records_fem') }}">Records femeninos</a></li>
          </ul>
       </li>
-      <li class="dropdown">
+      <li class="dropdown{% if com.esCuota %} active{% endif %}">
          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Informes <span class="caret"></span></a>
          <ul class="dropdown-menu">
             <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
             <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
+            <li><a href="{{ path('pantalla_cuotas') }}">Cuotas</a></li>
             <li><a href="{{ path('pagos_pendientes') }}">Pagos pendientes</a></li>
             <li><a href="{{ path('ingresos') }}">Ingresos</a></li>
          </ul>
@@ -30,9 +32,14 @@
 
 {% block breadcrumb %}
   <li><a href="{{ path('homepage_admin') }}">Portada Admin</a></li>
-  <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
-  <li><a href="{{ path('ver_competicion', {'id': com.sid}) }}">{{ com.nombre }} ({{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }})</a></li>
-  <li><a href="{{ path('listado_inscripciones', {'sidCom': com.sid}) }}">Inscripciones</a></li>
+  {% if com.esCuota %}
+     <li>Informes</li>
+     <li><a href="{{ path('pantalla_cuotas') }}">Cuotas</a></li>
+  {% else %}
+     <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
+     <li><a href="{{ path('ver_competicion', {'id': com.sid}) }}">{{ com.nombre }} ({{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }})</a></li>
+  {% endif %}
+  <li><a href="{{ path('listado_inscripciones', {'sidCom': com.sid}) }}">Inscripciones{% if com.esCuota %} {{ com.nombre }} ({{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }}){% endif %}</a></li>
   <li class="active">Inscribir atletas</li>
 {% endblock %}
 
@@ -50,7 +57,7 @@
    <div class="row">
       <ul class="nav nav-pills col-xs-9">
          <li role="presentation" id="inspill-atl" class="active"><a href="#" onClick="toggleInsPages('atl')">Atletas</a></li>
-         <li role="presentation" id="inspill-pru" class="disabled"><a href="#" onClick="toggleInsPages('pru')">Pruebas</a></li>
+         <li role="presentation" id="inspill-pru" class="disabled{% if com.esCuota %} hidden{% endif %}"><a href="#" onClick="toggleInsPages('pru')">Pruebas</a></li>
          <li role="presentation" id="inspill-confirm" class="disabled"><a href="#" onClick="toggleInsPages('confirm')">Confirmación</a></li>
       </ul>
       <button id="btn-next" class="btn btn-primary pull-right" disabled onClick="nextPill()">Siguiente <span class="glyphicon glyphicon-arrow-right"></span></button>
