--- a/src/Easanles/AtletismoBundle/Resources/views/Miscom/inscripcion_miscom.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Miscom/inscripcion_miscom.html.twig
@@ -25,6 +25,7 @@
          <ul class="dropdown-menu">
             <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
             <li><a href="{{ path('pantalla_asistencia') }}">Asistencia a eventos</a></li>
+            <li><a href="{{ path('pantalla_cuotas') }}">Cuotas</a></li>
             <li><a href="{{ path('pagos_pendientes') }}">Pagos pendientes</a></li>
             <li><a href="{{ path('ingresos') }}">Ingresos</a></li>
          </ul>
